--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,11 +29,12 @@ repos:
       - id: flake8
         args:
           - --max-line-length=100
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.781
-    hooks:
-      - id: mypy
-        args: [--no-strict-optional, --ignore-missing-imports]
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v0.781
+  #   hooks:
+  #     - id: mypy
+  #       args: [--no-strict-optional, --ignore-missing-imports]
+  #       additional_dependencies: ["sqlalchemy-stubs"]
   # - repo: https://github.com/packit/pre-commit-hooks
   #   rev: master
   #   hooks:
