Make token expiration configurable
Might not have much of a sense in a production setup, but make testing
much easier.

Signed-off-by: Hunor Csomortáni <csomh@redhat.com>

--- a/config.py.example
+++ b/config.py.example
@@ -2,3 +2,5 @@ SQLALCHEMY_DATABASE_URI = "sqlite:////tokman/access_tokens.db"
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 GITHUB_APP_ID = 9999
 GITHUB_APP_PRIVATE_KEY = "/secrets/private-key.pem"
+# How many seconds before expiration should tokens be renewed?
+TOKEN_RENEW_AT = 60
