Create the database in /tmp
In OpenShift, this is where the app has write permissions.

Signed-off-by: Hunor Csomortáni <csomh@redhat.com>

--- a/config.py.example
+++ b/config.py.example
@@ -1,4 +1,4 @@
-SQLALCHEMY_DATABASE_URI = "sqlite:////tokman/access_tokens.db"
+SQLALCHEMY_DATABASE_URI = "sqlite:////tmp/access_tokens.db"
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 GITHUB_APP_ID = 9999
 GITHUB_APP_PRIVATE_KEY = "/secrets/private-key.pem"
