--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url =  sqlite:////tokman/access_tokens.db
+sqlalchemy.url =  sqlite:////tmp/access_tokens.db
 
 
 [post_write_hooks]
