--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,20 @@
 # HOWTO: https://pre-commit.com/#usage
 # pip3 install pre-commit
-# pre-commit install
+# pre-commit install -t pre-commit -t pre-push
 
 repos:
   - repo: https://github.com/psf/black
-    rev: stable
+    rev: 20.8b1
     hooks:
       - id: black
         language_version: python3.6
-  - repo: https://github.com/prettier/pre-commit
-    rev: v2.1.2
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.2.1
     hooks:
       - id: prettier
         exclude: tests_requre/openshift_integration/test_data/*
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
+    rev: v3.3.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -24,7 +24,7 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 3.8.4
     hooks:
       - id: flake8
         args:
@@ -35,9 +35,10 @@ repos:
   #     - id: mypy
   #       args: [--no-strict-optional, --ignore-missing-imports]
   #       additional_dependencies: ["sqlalchemy-stubs"]
-  # - repo: https://github.com/packit/pre-commit-hooks
-  #   rev: master
-  #   hooks:
-  #     - id: check-rebase
-  #       args:
-  #         - git://github.com/packit/tokman.git
+  - repo: https://github.com/packit/pre-commit-hooks
+    rev: 76dd54a98306a9f6ecf6672aa7687d6f07091c4e
+    hooks:
+      - id: check-rebase
+        args:
+          - git://github.com/packit/tokman.git
+        stages: [manual, push]
